--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nathaniel R-S Photos</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -17,11 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Righteous&display=swap" rel="stylesheet"> 
 
 
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="index.css">
-    <!--
-    <link rel="icon" href="favicon.ico" />
-    -->
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
