--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </script>
 
     <div class="text"> 
-        <h1 style="font-size: 70px; text-align:center"><div class="weewoo">Nathaniel Rodwell-Simon Photography</div></h1>
+        <h1 style="font-size: 55px; text-align:center; font-weight: bolder;"><div class="weewoo">Nathaniel Rodwell-Simon Photography</div></h1>
             
-        <p style="font-size: 43px; text-align:center">New Jersey based photographer</p>
+        <p style="font-size: 35px; text-align:center">New Jersey based photographer</p>
     </div>
 
         <br>
