--- a/index.html
+++ b/index.html
@@ -103,8 +103,15 @@
             <li>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/6ba84cab5f0742efac0c1b09b09c271c/revisions/62f288512d3b149636a2b2733c4673de/renditions/6b8ba1d2bc29dc31fc09699b0a166b3c" onclick="openModal();currentSlide(16)" loading="lazy">
             </li>
+            <li>
+              <img src="https://cdn.discordapp.com/attachments/890404257579290696/996583437009956884/shd-01.jpg" onclick="openModal();currentSlide(16)" loading="lazy">
+          </li>
+          <li>
+            <img src="https://cdn.discordapp.com/attachments/890404257579290696/996574325572370603/shd-08.jpg" onclick="openModal();currentSlide(16)" loading="lazy">
+        </li>
 
-            <!--  Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens!  -->
+
+          
             <li></li>
           </ul>
 
@@ -118,71 +125,79 @@
             <div class="modal-content">
 
               <div class="mySlides">
-                <div class="numbertext">1 / 16</div>
+                <div class="numbertext">1 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/b9c699b6317b403089e8bb88d8b6e76b/revisions/0af0289c5a906d09c67bf6ccd709968a/renditions/d593b6fc30d6ce34052bfa9d57919f84" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">2 / 16</div>
+                <div class="numbertext">2 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/8cc2ad33bcdd4c71987dcb50c85dce9d/revisions/ccaa4388dc32821c5bcb72899c180ebd/renditions/5ad0f46a32bc4f1895d63799ffc4c80e" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">3 / 16</div>
+                <div class="numbertext">3 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/bfe4e4db1b4e4f1b870d86f8839b2526/revisions/2e6a2fa2e4de6b558cb0c3a2a9279226/renditions/e894659efb8d60dd0f36031993a0061a" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">4 / 16</div>
+                <div class="numbertext">4 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/0740ce3554b24e33aecda61a50ee8acd/revisions/4e7eaccaf78f4c4eb480a22889f04f89/renditions/618361d6cfb310d0d7ce9296492c4b8f" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">5 / 16</div>
+                <div class="numbertext">5 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/0603288bc5c14e0b8d33cca98675b128/revisions/fc9a6a058185460689f96b748e916cb7/renditions/8ea75328343f25e4133ae15c6497b806" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">6 / 16</div>
+                <div class="numbertext">6 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/296730e08ccd41b5bcf8b4178b7e6adb/revisions/21b583a5a3104a96b777e0e239fb08f4/renditions/1aabb22012a192b8e73a899977f1aa86" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">7 / 16</div>
+                <div class="numbertext">7 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/995afd20b65a492d81fa58a39cf7ada8/revisions/41b4ea828cc34443ae10f43193c49ff9/renditions/9cad1ce8adf039d4473e8d77c4b3808f" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">8 / 16</div>
+                <div class="numbertext">8 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/72956f5a6881494db45388a4af8ff8f8/revisions/682ac8a3515a479fadc5a647bcc33f6d/renditions/6bb9b577cde3e4055d294bc2b9e562bd" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">9 / 16</div>
+                <div class="numbertext">9 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/fea4e189357a48ad8ea3a0075e42a8ee/revisions/4d3c12988762425d9962727be63d945c/renditions/d08154452f7adc8b01a2a077cf86547a" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">10 / 16</div>
+                <div class="numbertext">10 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/43dfe721dfaa462a827e6b3a840d5fac/revisions/144df32d8710cb879c7033c33df4585e/renditions/5305139263d8a6663c373cea4d3955ea" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">11 / 16</div>
+                <div class="numbertext">11 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/6b1c8997b1274c75b38ccd0af045d7a8/revisions/f7b7ff7e51653286789211c4bb7a2f01/renditions/adddcdd35daae5d878a45c1963183a7e" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">12 / 16</div>
+                <div class="numbertext">12 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/adae1f2155d348e8b12946a5de3b8ed8/revisions/9fbc27a2288d6abf23a5fcb56be6ddc7/renditions/0c314c396f6fca1280bc26cff7fc38d4" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext" style="font-family: 'Fredoka One', cursive;">13 / 16</div>
+                <div class="numbertext" style="font-family: 'Fredoka One', cursive;">13 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/fce9d3cbe3c841e9bc57ea99b4a4cafa/revisions/38155f6c250c6aa8af818d3f0cde21a7/renditions/e67fabad86acaf98490594ae171798db" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">14 / 16</div>
+                <div class="numbertext">14 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/cb193d99d6eb412d98049a1c6b5e8bde/revisions/64bdb14e3b4efe3edd7d589f65550cfa/renditions/8365a15f40964a98aa5990aed1234460" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">15 / 16</div>
+                <div class="numbertext">15 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/e54f99ad824841adb251e7ace3c61dba/revisions/8a9a6c17898e7d5f44309906c3e51f39/renditions/0d3f221fce2b10105243bb0c473d5742" style="width:100%">
               </div>
               <div class="mySlides">
-                <div class="numbertext">16 / 16</div>
+                <div class="numbertext">16 / 18</div>
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/6ba84cab5f0742efac0c1b09b09c271c/revisions/62f288512d3b149636a2b2733c4673de/renditions/6b8ba1d2bc29dc31fc09699b0a166b3c" style="width:100%">
               </div>
+              <div class="mySlides">
+                <div class="numbertext">17 / 17</div>
+                <img src="https://cdn.discordapp.com/attachments/890404257579290696/996583437009956884/shd-01.jpg" style="width:100%">
+              </div>
+              <div class="mySlides">
+                <div class="numbertext">18 / 18</div>
+                <img src="https://cdn.discordapp.com/attachments/890404257579290696/996574325572370603/shd-08.jpg" style="width:100%">
+              </div>
 
-
+              
 
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
