--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                 <img src="https://lightroom.adobe.com/v2c/spaces/b55eda4f8c2745fd9bb9634248755010/assets/6ba84cab5f0742efac0c1b09b09c271c/revisions/62f288512d3b149636a2b2733c4673de/renditions/6b8ba1d2bc29dc31fc09699b0a166b3c" onclick="openModal();currentSlide(16)" loading="lazy">
             </li>
             <li>
-              <img src="https://cdn.discordapp.com/attachments/890404257579290696/996583437009956884/shd-01.jpg" onclick="openModal();currentSlide(16)" loading="lazy">
+              <img src="https://cdn.discordapp.com/attachments/890404257579290696/996583437009956884/shd-01.jpg" onclick="openModal();currentSlide(17)" loading="lazy">
           </li>
           <li>
-            <img src="https://cdn.discordapp.com/attachments/890404257579290696/996574325572370603/shd-08.jpg" onclick="openModal();currentSlide(16)" loading="lazy">
+            <img src="https://cdn.discordapp.com/attachments/890404257579290696/996574325572370603/shd-08.jpg" onclick="openModal();currentSlide(18)" loading="lazy">
         </li>
 
 
@@ -116,6 +116,18 @@
           </ul>
 
 
+<!--
+          <div class="footer-basic">
+            <footer>
+
+                <p></p>
+                <img src="https://cdn.discordapp.com/attachments/890404257579290696/988920792324669510/IMG_5049.png"
+                width="5px" 
+                height=auto>
+            </footer>
+          </div>
+
+          -->
 
 
 
@@ -247,7 +259,7 @@
               captionText.innerHTML = dots[slideIndex-1].alt;
             }
             </script>
-            
+
 
     
 </body>
